# asset-forecaster

./: README.md  backtest.py  polymarket.py  pyproject.toml  timesfm_model.py  update_plot.py  update_pred.py
.github/workflows/: backtest.yml  pred-update.yml
assets/: BRENT.py  BTC.py  ETH.py  GOLD.py  SILVER.py
backtests/: backtest_2026-06-21_12-32-04.csv  backtest_2026-06-21_12-32-04.md  backtest_2026-06-21_21-08-04.csv  backtest_2026-06-21_21-08-04.md
